<resources>
    <string name="app_name">ToDoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_img_1">Splash img 1</string>
    <string name="todoapp">ToDoApp</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="create_account">Create account</string>
    <string name="add_task">Add Task</string>
    <string name="enter_task">Enter task</string>
    <string name="item_1">Item 1</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="close_button">Close Button</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
</resources>