<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:id="@+id/mtCardView"
    tools:context=".fragments.DialogFragment">

    <LinearLayout
        android:id="@+id/llLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical">
        
        <ImageView
            android:id="@+id/taskClose"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="320dp"
            android:src="@drawable/ic_baseline_close_24"
            android:contentDescription="@string/close_button" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="true">
                
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTask"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:hint="@string/enter_task"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btnTask"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="140dp"
            android:text="@string/add_task" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>